// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BottomNavigation组件 快照测试 基本使用 1`] = `
<div
  className="sc-AxjAm epBuwE sinoui-bottom-navigation"
>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw coTlqr"
    onClick={[Function]}
    role="button"
    selected={false}
    type="button"
    value="recents"
  >
    <span
      className="sc-AxirZ enDZtl"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13 3c-4.97 0-9 4.03-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42C8.27 19.99 10.51 21 13 21c4.97 0 9-4.03 9-9s-4.03-9-9-9zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
        />
      </svg>
    </span>
    <span
      className="Typography__TypographyWrapper-sc-12agh80-0 cwJExj sinoui-typography sinoui-typography--body2"
      color="textPrimary"
      type="body2"
    >
      Recents
    </span>
  </button>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw ldBZAV"
    onClick={[Function]}
    role="button"
    selected={true}
    type="button"
    value="favorites"
  >
    <span
      className="sc-AxirZ enDZtl"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
        />
      </svg>
    </span>
    <span
      className="Typography__TypographyWrapper-sc-12agh80-0 cwJExj sinoui-typography sinoui-typography--body2"
      color="textPrimary"
      type="body2"
    >
      Favorites
    </span>
  </button>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw coTlqr"
    onClick={[Function]}
    role="button"
    selected={false}
    type="button"
    value="nearby"
  >
    <span
      className="sc-AxirZ enDZtl"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
    </span>
    <span
      className="Typography__TypographyWrapper-sc-12agh80-0 cwJExj sinoui-typography sinoui-typography--body2"
      color="textPrimary"
      type="body2"
    >
      Nearby
    </span>
  </button>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw coTlqr"
    onClick={[Function]}
    role="button"
    selected={false}
    type="button"
    value="folder"
  >
    <span
      className="sc-AxirZ enDZtl"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
        />
      </svg>
    </span>
    <span
      className="Typography__TypographyWrapper-sc-12agh80-0 cwJExj sinoui-typography sinoui-typography--body2"
      color="textPrimary"
      type="body2"
    >
      Folder
    </span>
  </button>
</div>
`;

exports[`BottomNavigation组件 快照测试 指定背景颜色 1`] = `
Array [
  <div
    className="sc-AxjAm epBuwE sinoui-bottom-navigation"
  >
    <button
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw coTlqr"
      onClick={[Function]}
      role="button"
      selected={false}
      type="button"
      value="recents"
    >
      <span
        className="sc-AxirZ enDZtl"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 3c-4.97 0-9 4.03-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42C8.27 19.99 10.51 21 13 21c4.97 0 9-4.03 9-9s-4.03-9-9-9zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
          />
        </svg>
      </span>
      <span
        className="Typography__TypographyWrapper-sc-12agh80-0 cwJExj sinoui-typography sinoui-typography--body2"
        color="textPrimary"
        type="body2"
      >
        Recents
      </span>
    </button>
    <button
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw ldBZAV"
      onClick={[Function]}
      role="button"
      selected={true}
      type="button"
      value="favorites"
    >
      <span
        className="sc-AxirZ enDZtl"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
          />
        </svg>
      </span>
      <span
        className="Typography__TypographyWrapper-sc-12agh80-0 cwJExj sinoui-typography sinoui-typography--body2"
        color="textPrimary"
        type="body2"
      >
        Favorites
      </span>
    </button>
    <button
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw coTlqr"
      onClick={[Function]}
      role="button"
      selected={false}
      type="button"
      value="nearby"
    >
      <span
        className="sc-AxirZ enDZtl"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
          />
        </svg>
      </span>
      <span
        className="Typography__TypographyWrapper-sc-12agh80-0 cwJExj sinoui-typography sinoui-typography--body2"
        color="textPrimary"
        type="body2"
      >
        Nearby
      </span>
    </button>
    <button
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw coTlqr"
      onClick={[Function]}
      role="button"
      selected={false}
      type="button"
      value="folder"
    >
      <span
        className="sc-AxirZ enDZtl"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
          />
        </svg>
      </span>
      <span
        className="Typography__TypographyWrapper-sc-12agh80-0 cwJExj sinoui-typography sinoui-typography--body2"
        color="textPrimary"
        type="body2"
      >
        Folder
      </span>
    </button>
  </div>,
  <div
    className="sc-AxjAm efnVKw sinoui-bottom-navigation"
    color="primary"
  >
    <button
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw lbXIiu"
      color="primary"
      onClick={[Function]}
      role="button"
      selected={false}
      type="button"
      value="recents"
    >
      <span
        className="sc-AxirZ enDZtl"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 3c-4.97 0-9 4.03-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42C8.27 19.99 10.51 21 13 21c4.97 0 9-4.03 9-9s-4.03-9-9-9zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
          />
        </svg>
      </span>
      <span
        className="Typography__TypographyWrapper-sc-12agh80-0 cwJExj sinoui-typography sinoui-typography--body2"
        color="textPrimary"
        type="body2"
      >
        Recents
      </span>
    </button>
    <button
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw gOanbJ"
      color="primary"
      onClick={[Function]}
      role="button"
      selected={true}
      type="button"
      value="favorites"
    >
      <span
        className="sc-AxirZ enDZtl"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
          />
        </svg>
      </span>
      <span
        className="Typography__TypographyWrapper-sc-12agh80-0 cwJExj sinoui-typography sinoui-typography--body2"
        color="textPrimary"
        type="body2"
      >
        Favorites
      </span>
    </button>
    <button
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw lbXIiu"
      color="primary"
      onClick={[Function]}
      role="button"
      selected={false}
      type="button"
      value="nearby"
    >
      <span
        className="sc-AxirZ enDZtl"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
          />
        </svg>
      </span>
      <span
        className="Typography__TypographyWrapper-sc-12agh80-0 cwJExj sinoui-typography sinoui-typography--body2"
        color="textPrimary"
        type="body2"
      >
        Nearby
      </span>
    </button>
    <button
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw lbXIiu"
      color="primary"
      onClick={[Function]}
      role="button"
      selected={false}
      type="button"
      value="folder"
    >
      <span
        className="sc-AxirZ enDZtl"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
          />
        </svg>
      </span>
      <span
        className="Typography__TypographyWrapper-sc-12agh80-0 cwJExj sinoui-typography sinoui-typography--body2"
        color="textPrimary"
        type="body2"
      >
        Folder
      </span>
    </button>
  </div>,
  <div
    className="sc-AxjAm jUAXjb sinoui-bottom-navigation"
    color="success"
  >
    <button
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw lbXIiu"
      color="success"
      onClick={[Function]}
      role="button"
      selected={false}
      type="button"
      value="recents"
    >
      <span
        className="sc-AxirZ enDZtl"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 3c-4.97 0-9 4.03-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42C8.27 19.99 10.51 21 13 21c4.97 0 9-4.03 9-9s-4.03-9-9-9zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
          />
        </svg>
      </span>
      <span
        className="Typography__TypographyWrapper-sc-12agh80-0 cwJExj sinoui-typography sinoui-typography--body2"
        color="textPrimary"
        type="body2"
      >
        Recents
      </span>
    </button>
    <button
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw gOanbJ"
      color="success"
      onClick={[Function]}
      role="button"
      selected={true}
      type="button"
      value="favorites"
    >
      <span
        className="sc-AxirZ enDZtl"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
          />
        </svg>
      </span>
      <span
        className="Typography__TypographyWrapper-sc-12agh80-0 cwJExj sinoui-typography sinoui-typography--body2"
        color="textPrimary"
        type="body2"
      >
        Favorites
      </span>
    </button>
    <button
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw lbXIiu"
      color="success"
      onClick={[Function]}
      role="button"
      selected={false}
      type="button"
      value="nearby"
    >
      <span
        className="sc-AxirZ enDZtl"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
          />
        </svg>
      </span>
      <span
        className="Typography__TypographyWrapper-sc-12agh80-0 cwJExj sinoui-typography sinoui-typography--body2"
        color="textPrimary"
        type="body2"
      >
        Nearby
      </span>
    </button>
    <button
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw lbXIiu"
      color="success"
      onClick={[Function]}
      role="button"
      selected={false}
      type="button"
      value="folder"
    >
      <span
        className="sc-AxirZ enDZtl"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
          />
        </svg>
      </span>
      <span
        className="Typography__TypographyWrapper-sc-12agh80-0 cwJExj sinoui-typography sinoui-typography--body2"
        color="textPrimary"
        type="body2"
      >
        Folder
      </span>
    </button>
  </div>,
]
`;

exports[`BottomNavigation组件 快照测试 结合Badge组件使用 1`] = `
<div
  className="sc-AxjAm epBuwE sinoui-bottom-navigation"
>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw coTlqr"
    onClick={[Function]}
    role="button"
    selected={false}
    type="button"
    value="recents"
  >
    <span
      className="sc-AxirZ enDZtl"
    >
      <span
        className="Badge__BadgeWrapper-sc-1mox8ry-0 ljnePt sinoui-badge sinoui-badge--dot"
      >
        <span
          className="Badge__BadgeCircle-sc-1mox8ry-1 irelgB"
          color="error"
        />
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 3c-4.97 0-9 4.03-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42C8.27 19.99 10.51 21 13 21c4.97 0 9-4.03 9-9s-4.03-9-9-9zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
          />
        </svg>
      </span>
    </span>
    <span
      className="Typography__TypographyWrapper-sc-12agh80-0 cwJExj sinoui-typography sinoui-typography--body2"
      color="textPrimary"
      type="body2"
    >
      Recents
    </span>
  </button>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw ldBZAV"
    onClick={[Function]}
    role="button"
    selected={true}
    type="button"
    value="favorites"
  >
    <span
      className="sc-AxirZ enDZtl"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
        />
      </svg>
    </span>
    <span
      className="Typography__TypographyWrapper-sc-12agh80-0 cwJExj sinoui-typography sinoui-typography--body2"
      color="textPrimary"
      type="body2"
    >
      Favorites
    </span>
  </button>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw coTlqr"
    onClick={[Function]}
    role="button"
    selected={false}
    type="button"
    value="nearby"
  >
    <span
      className="sc-AxirZ enDZtl"
    >
      <span
        className="Badge__BadgeWrapper-sc-1mox8ry-0 ljnePt sinoui-badge"
      >
        <span
          className="Badge__BadgeCircle-sc-1mox8ry-1 iUpzoi"
          color="error"
        >
          88
        </span>
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
          />
        </svg>
      </span>
    </span>
    <span
      className="Typography__TypographyWrapper-sc-12agh80-0 cwJExj sinoui-typography sinoui-typography--body2"
      color="textPrimary"
      type="body2"
    >
      Nearby
    </span>
  </button>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw coTlqr"
    onClick={[Function]}
    role="button"
    selected={false}
    type="button"
    value="folder"
  >
    <span
      className="sc-AxirZ enDZtl"
    >
      <span
        className="Badge__BadgeWrapper-sc-1mox8ry-0 ljnePt sinoui-badge"
      >
        <span
          className="Badge__BadgeCircle-sc-1mox8ry-1 fgEXpB"
          color="error"
        >
          99+
        </span>
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
          />
        </svg>
      </span>
    </span>
    <span
      className="Typography__TypographyWrapper-sc-12agh80-0 cwJExj sinoui-typography sinoui-typography--body2"
      color="textPrimary"
      type="body2"
    >
      Folder
    </span>
  </button>
</div>
`;

exports[`BottomNavigation组件 快照测试 设置隐藏所有标签名称 1`] = `
<div
  className="sc-AxjAm epBuwE sinoui-bottom-navigation"
>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw eOHiSL"
    onClick={[Function]}
    role="button"
    selected={false}
    type="button"
    value="recents"
  >
    <span
      className="sc-AxirZ enDZtl"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13 3c-4.97 0-9 4.03-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42C8.27 19.99 10.51 21 13 21c4.97 0 9-4.03 9-9s-4.03-9-9-9zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
        />
      </svg>
    </span>
  </button>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw ldBZAV"
    onClick={[Function]}
    role="button"
    selected={true}
    type="button"
    value="favorites"
  >
    <span
      className="sc-AxirZ enDZtl"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
        />
      </svg>
    </span>
    <span
      className="Typography__TypographyWrapper-sc-12agh80-0 cwJExj sinoui-typography sinoui-typography--body2"
      color="textPrimary"
      type="body2"
    >
      Favorites
    </span>
  </button>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw eOHiSL"
    onClick={[Function]}
    role="button"
    selected={false}
    type="button"
    value="nearby"
  >
    <span
      className="sc-AxirZ enDZtl"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
    </span>
  </button>
  <button
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxiKw eOHiSL"
    onClick={[Function]}
    role="button"
    selected={false}
    type="button"
    value="folder"
  >
    <span
      className="sc-AxirZ enDZtl"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
        />
      </svg>
    </span>
  </button>
</div>
`;
